# TASNI

./: .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  AUDIT_REPORT.md  AUTHORS  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: pull_request_template.md
.github/issue_template/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
audit_notes/: data_verification_audit.md  figures_compliance_audit.md  manuscript_text_audit.md  phase1_archaeology.md  phase2_data_integrity.md  phase3_code_pipeline.md  phase4_manuscript_review.md  phase5_figures.md  phase6_latex_bibliography.md  phase7_8_documentation_adversarial.md  reproducibility_audit.md  science_review_audit.md  url_update_audit.md
benchmarks/: new_golden_metrics.py
data/processed/: tasni_golden_targets.csv
docs/: CLAIM_ARTIFACT_LEDGER.md  DATA_AVAILABILITY.md  PUBLICATION_STATUS.md  RELEASE_PREPARATION.md  REPRODUCIBILITY_QUICKSTART.md  analysis_workflow.md  api_reference.md  architecture.md  cleanup_summary.md  color_selection_justification.md  comprehensive_improvement_plan.md  error_budget.md  hypotheses.md  infrastructure_summary.md  jwst_proposal_guide.md  literature_review.md  migration_guide.md  ml_pipeline.md  next_steps_summary.md  optimization_guide.md  optimizations.md  paper_structure.md  parallax_methods.md  pipeline.md  project_analysis.md  publication_checklist.md  quickstart.md  reorganization_execution_summary.md  reproducibility.md  research_opportunities.md  research_scope.md  roadmap.md  statistical_methods.md  status_report.md  success_criteria.md  survey_integration.md  temperature_estimation.md  terminology.md  workspace_organization.md  workspace_organization_plan.md
docs/legacy/: claude.md  devlog.md  final_report.md  project_summary.md  readme_update.md  reorganization_summary.md  thesis.md  tier5_readme.md
docs/output/: pipeline_status.md  quality_report.md  readme.md  schema.md
docs/paper/: README.md  aastex701.cls  abstract.md  compile_pdf.py  discussion_conclusions.md  draft.md  introduction.md  methods_section.md  readme.md  references.bib  results_section.md  tasni_paper.html  tasni_paper.tex
notebooks/: readme.md  tasni_analysis.ipynb
output/: .gitkeep  IMPLEMENTATION_SUMMARY.md  population_analysis_results.json
output/analysis/: binary_model_results.csv
review_bundle/: CITATION.cff  README.md  REVIEW_README.md  pyproject.toml
scripts/: generate_blend_table.py  generate_figures.py  generate_golden_cds.py  injection_recovery.py  mcmc_parallax_comparison.py  run_opus_mcmc.py  run_opus_mcmc_analytic.py  verify_release_checksums.py
tasni_paper_final/: aastex701.cls  cover_letter.tex  golden_sample_cds.txt  manuscript.tex  references.bib
tests/: __init__.py  conftest.py  test_crossmatch.py  test_filters.py  test_integration.py  test_lamost_crossmatch.py  test_new_vetoes.py  test_validation.py
(+231 files in other folders)
