[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tasni"
version = "1.0.0"
description = "Thermal Anomaly Search for Non-communicating Intelligence (TASNI)"
authors = ["Dennis Palucki <paluckide@yahoo.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dpalucki/tasni"
packages = [
    { include = "tasni", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scipy = ">=1.10.0"
astropy = ">=6.0.0"
astroquery = ">=0.4.6"
healpy = ">=1.16.0"
duckdb = ">=0.9.0"
pyvo = ">=1.4"
scikit-learn = ">=1.3.0"
umap-learn = ">=0.5.4"
matplotlib = ">=3.7.0"
plotly = ">=5.15.0"
pyarrow = ">=12.0.0"
fastparquet = ">=2023.7.0"
tqdm = ">=4.65.0"
requests = ">=2.31.0"
pytest = ">=7.4.0"
xgboost = "^3.1.3"
lightgbm = "^4.6.0"
pymc = "^5.27.1"
arviz = ">=0.17.0"
pytensor = ">=2.18.0"
pydantic = "^2.12.5"
typer = "^0.21.1"
structlog = "^25.5.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.1.0"
isort = ">=5.13.2"
ruff = "^0.5.0"
flake8 = ">=7.0.0"
pylint = ">=3.0.0"
bandit = ">=1.7.6"
safety = ">=2.3.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
pytest-xdist = ">=3.5.0"
coverage = ">=7.4.0"
codecov = ">=2.1.13"
pre-commit = ">=3.6.0"
sphinx = ">=7.2.0"
sphinx-rtd-theme = ">=2.0.0"
myst-parser = ">=2.0.0"
sphinx-autodoc-typehints = ">=1.25.0"
jupyter = ">=1.0.0"
jupyterlab = ">=4.0.0"
ipywidgets = ">=8.1.0"
line-profiler = ">=4.0.0"
memory-profiler = ">=0.61.0"
python-dotenv = ">=1.0.0"
aiohttp = ">=3.9.0"
mypy = "^1.19.1"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "I", "N", "ARG", "UP", "C4", "PIE", "ISC", "G", "ANN", "TCH", "SLF"]
ignore = ["E501", "ANN101", "ANN401"]
per-file-ignores = { "__init__.py" = ["F401"], "tests/*" = ["S101"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.bandit]
exclude_dirs = ["tests", "src/tasni/legacy"]
skips = ["B101", "B608"]

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = false
disallow_any_unimported = false
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["legacy/", "optimized/"]
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (slower, may use files)",
    "slow: Slow tests (actual network calls or large datasets)",
    "postgres: Tests requiring PostgreSQL database",
]
